--- a/Movie_Reccomendation_System_ML_Project.ipynb
+++ b/Movie_Reccomendation_System_ML_Project.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1sh0qRnbqqvDSQRw-4TNQZyBthYptUrzr",
-      "authorship_tag": "ABX9TyMvbDMDoYThPHPdX0ns2UIm",
+      "authorship_tag": "ABX9TyMJzLjbKF+B0uzgA83NiHwM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 229,
+      "execution_count": null,
       "metadata": {
         "id": "5gH9VO0fEpIU"
       },
@@ -52,7 +52,7 @@
       "metadata": {
         "id": "588QktQ-FprE"
       },
-      "execution_count": 230,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -69,7 +69,7 @@
         "id": "ng2mkVlLHFuI",
         "outputId": "a12110e5-1507-43e3-d34f-918701a898f5"
       },
-      "execution_count": 231,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -443,7 +443,7 @@
         "id": "377J-uz4HI_X",
         "outputId": "a9b4dd1e-e1b5-46d7-f64c-e4547e205b24"
       },
-      "execution_count": 232,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -766,7 +766,7 @@
       "metadata": {
         "id": "GDA5l4xKJdWQ"
       },
-      "execution_count": 233,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -782,7 +782,7 @@
         "id": "VMsfgP8ZJ9J_",
         "outputId": "3f3dc5a0-7ef5-4f7d-b24b-8b6df055bbd2"
       },
-      "execution_count": 234,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -992,7 +992,7 @@
       "metadata": {
         "id": "WG15iT_xHN3v"
       },
-      "execution_count": 235,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1008,7 +1008,7 @@
         "id": "jFdEuaxnMXrf",
         "outputId": "4c0a0282-41e4-4fec-ecb9-2a0be1e2e546"
       },
-      "execution_count": 236,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1180,7 +1180,7 @@
         "id": "4blPRj6hNKsF",
         "outputId": "049b023d-ae05-4760-e3d5-64fe04585c1e"
       },
-      "execution_count": 237,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1210,7 +1210,7 @@
       "metadata": {
         "id": "fTALSw1KOKWS"
       },
-      "execution_count": 238,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1225,7 +1225,7 @@
         "id": "3Ej1a5xZOcGy",
         "outputId": "162486da-7ded-4fe7-f515-d2da16fd3fd7"
       },
-      "execution_count": 239,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1259,7 +1259,7 @@
         "id": "nE1A3Q7xOPof",
         "outputId": "924ea47a-467d-4545-de00-7a658a258274"
       },
-      "execution_count": 240,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1283,7 +1283,7 @@
       "metadata": {
         "id": "nC5MjcgBOYS0"
       },
-      "execution_count": 241,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1299,7 +1299,7 @@
       "metadata": {
         "id": "jEzZW44FRcL0"
       },
-      "execution_count": 242,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1311,7 +1311,7 @@
       "metadata": {
         "id": "QQNDFAjbR8dS"
       },
-      "execution_count": 243,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1327,7 +1327,7 @@
         "id": "GOUkoSE6SnEf",
         "outputId": "72147b71-fbc8-4856-ef0f-f5c1a739bd6c"
       },
-      "execution_count": 244,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1495,7 +1495,7 @@
       "metadata": {
         "id": "02xBY_EySpDH"
       },
-      "execution_count": 245,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1511,7 +1511,7 @@
         "id": "CCSdLOKAWKGe",
         "outputId": "b686e2de-1ce3-4b36-db50-1bef4ebba3f3"
       },
-      "execution_count": 246,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1687,7 +1687,7 @@
       "metadata": {
         "id": "GW3K8Tu4WMCb"
       },
-      "execution_count": 247,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1699,7 +1699,7 @@
       "metadata": {
         "id": "EfKPYlOpWVb_"
       },
-      "execution_count": 248,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1715,7 +1715,7 @@
         "id": "vlFDDnN7WoTc",
         "outputId": "3cd4beeb-cf21-4a18-88dd-e65051ae6132"
       },
-      "execution_count": 249,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1889,7 +1889,7 @@
       "metadata": {
         "id": "hdOdP8HCWqMJ"
       },
-      "execution_count": 250,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1901,7 +1901,7 @@
       "metadata": {
         "id": "g2TvB7x1XnaN"
       },
-      "execution_count": 251,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1917,7 +1917,7 @@
         "id": "s9CwHuojX1_l",
         "outputId": "5da7f456-0b1c-417a-c1da-3cedd2805e38"
       },
-      "execution_count": 252,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2272,7 +2272,7 @@
       "metadata": {
         "id": "eGSMcM8rX46e"
       },
-      "execution_count": 253,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2287,7 +2287,7 @@
       "metadata": {
         "id": "SSCbJcDZc-ib"
       },
-      "execution_count": 254,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2303,7 +2303,7 @@
         "id": "q8lGjAr0dzoe",
         "outputId": "73525c7d-6cd0-4d2a-c042-fa91bd78cfea"
       },
-      "execution_count": 255,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2468,7 +2468,7 @@
       "metadata": {
         "id": "W2E5mKTQd1TZ"
       },
-      "execution_count": 256,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2484,7 +2484,7 @@
         "id": "h1ZKGYBiax1P",
         "outputId": "90114e16-5e50-43f3-f49f-c130bb82dcfa"
       },
-      "execution_count": 257,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2858,7 +2858,7 @@
         "id": "6TTXXCpfaz3O",
         "outputId": "38367405-b891-4ef2-d931-2680be4520e1"
       },
-      "execution_count": 258,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3172,7 +3172,7 @@
         "id": "K28Yac7hdtad",
         "outputId": "66ac4e13-4b29-41cb-97e8-e23070658949"
       },
-      "execution_count": 259,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3201,7 +3201,7 @@
         "id": "QJEkKGaBeRkl",
         "outputId": "8460f1e4-aa82-463c-e9b1-a596855d9cad"
       },
-      "execution_count": 260,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3515,7 +3515,7 @@
         "id": "SL0BoqOKfb0k",
         "outputId": "9f3062ce-301b-4666-b1a7-f5d93084d5f4"
       },
-      "execution_count": 261,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3544,7 +3544,7 @@
         "id": "KAraFWgGfnCZ",
         "outputId": "0345bdb7-be96-4085-da75-657197422764"
       },
-      "execution_count": 262,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3570,7 +3570,7 @@
       "metadata": {
         "id": "iq_jRcu3kPsy"
       },
-      "execution_count": 266,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3581,7 +3581,7 @@
       "metadata": {
         "id": "pOVrej9fmL-I"
       },
-      "execution_count": 267,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3592,7 +3592,7 @@
       "metadata": {
         "id": "hrNh4ctGrTdZ"
       },
-      "execution_count": 268,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3608,7 +3608,7 @@
       "metadata": {
         "id": "jUDhBEpYmyKc"
       },
-      "execution_count": 269,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3624,7 +3624,7 @@
         "id": "bvPgJl5snghf",
         "outputId": "6d3d4e11-6f40-4506-d463-d70b44cb6e4e"
       },
-      "execution_count": 270,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3653,7 +3653,7 @@
         "id": "d2ZFh6ILn2Ps",
         "outputId": "03225bce-4223-4176-af68-ef4f17670bfa"
       },
-      "execution_count": 272,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3673,14 +3673,14 @@
     {
       "cell_type": "code",
       "source": [
-        "# removing stop words from tags\n",
+        "# Removing stop words from tags\n",
         "from sklearn.feature_extraction.text import CountVectorizer\n",
         "cv = CountVectorizer(max_features=5000, stop_words='english')"
       ],
       "metadata": {
         "id": "HbuqBDWeq11_"
       },
-      "execution_count": 273,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3692,7 +3692,7 @@
       "metadata": {
         "id": "X_LCjrZzq5J6"
       },
-      "execution_count": 274,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3707,7 +3707,7 @@
         "id": "-PqKz5LCq7Hr",
         "outputId": "c38973f8-f5ac-48c9-f97a-58f7735b14a1"
       },
-      "execution_count": 275,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3727,7 +3727,7 @@
       "metadata": {
         "id": "guoAdTEYq9mu"
       },
-      "execution_count": 270,
+      "execution_count": null,
       "outputs": []
     }
   ]
