--- a/Movie_Reccomendation_System_ML_Project.ipynb
+++ b/Movie_Reccomendation_System_ML_Project.ipynb
@@ -4,8 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "mount_file_id": "1sh0qRnbqqvDSQRw-4TNQZyBthYptUrzr",
-      "authorship_tag": "ABX9TyMKS5dgy5PBEg196CAtYYIg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,8 +26,49 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Introduction\n",
+        "Movies hold universal appeal, connecting people of all backgrounds. Despite this unity, our individual movie preferences remain distinct, ranging from specific genres like thrillers, romance, or sci-fi to focusing on favorite actors and directors. While it’s challenging to generalize movies everyone would enjoy, data scientists analyze behavioral patterns to identify groups of similar movie preferences in society. As data scientists, we extract valuable insights from audience behavior and movie attributes to develop the “Movie Recommendation System.”\n",
+        "\n",
+        "Movie recommendation systems are not just about convenience; they represent a fascinating intersection of data science, machine learning, and user experience design. These systems can make highly personalized recommendations that keep you engaged and satisfied by analyzing vast amounts of data, such as your viewing history, ratings, and even the time you spend watching certain genres. One of the most famous websites for movie recommendations is IMDB. Let’s delve into the “Movie Recommendation System” fundamentals to unlock the magic of personalized movie suggestions using machine learning algorithms."
+      ],
+      "metadata": {
+        "id": "inQIFQj8Inmf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# What is a Recommendation System?\n",
+        "A Recommendation System is a filtration program whose prime goal is to predict a user’s “rating” or “preference” toward a domain-specific item or item. In our case, this domain-specific item is a movie. Therefore, the main focus of our recommendation system is to filter and predict only those movies that a user would prefer, given some data about the user."
+      ],
+      "metadata": {
+        "id": "aLS2aifDIwgJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Why Recommendation Systems?\n",
+        "## Recommendation Systems are essential for several reasons:\n",
+        "\n",
+        "- Recommendation Systems offer personalized suggestions based on user preferences\n",
+        "and user ratings, ensuring that they discover content and products that are relevant and interesting to them.\n",
+        "- By providing tailored recommendations, users are more likely to engage with the platform, increasing user satisfaction and retention.\n",
+        "- E-commerce platforms like Amazon use recommendation engines to promote products, leading to higher sales and revenue as users discover and purchase items they might not have considered.\n",
+        "- In today’s digital landscape, recommendation systems help users navigate the overwhelming amount of available content, making it easier to find a particular movie or series they seek or in any language they want, like English or Korean.\n",
+        "- Recommendation algorithms expose users to new and diverse content, expanding their horizons and introducing them to items they might have overlooked.\n",
+        "- Relying on past behavior and preferences, recommendation systems help users make informed decisions about complex and subjective choices such as movies, music, or books.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "dHlqoyGHI25k"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 191,
+      "execution_count": null,
       "metadata": {
         "id": "5gH9VO0fEpIU"
       },
@@ -55,7 +94,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 192,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -76,7 +115,7 @@
       "metadata": {
         "id": "588QktQ-FprE"
       },
-      "execution_count": 193,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -93,7 +132,7 @@
         "id": "ng2mkVlLHFuI",
         "outputId": "2ac048d2-a78e-41bf-a8b1-13a61c2622e3"
       },
-      "execution_count": 194,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -467,7 +506,7 @@
         "id": "377J-uz4HI_X",
         "outputId": "eb06e9c0-f9b1-4dce-d784-cd1d851f9019"
       },
-      "execution_count": 195,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -790,7 +829,7 @@
       "metadata": {
         "id": "GDA5l4xKJdWQ"
       },
-      "execution_count": 196,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -807,7 +846,7 @@
         "id": "VMsfgP8ZJ9J_",
         "outputId": "0736d3b8-dce1-4f45-e453-89b9b99327a0"
       },
-      "execution_count": 197,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1292,7 +1331,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 198,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1332,7 +1371,7 @@
         "id": "4blPRj6hNKsF",
         "outputId": "cba644da-962b-47b1-d779-4a2a20079d9b"
       },
-      "execution_count": 199,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1819,7 +1858,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 200,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1851,7 +1890,7 @@
       "metadata": {
         "id": "Z32elW-msjOT"
       },
-      "execution_count": 201,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1862,7 +1901,7 @@
       "metadata": {
         "id": "UxbxOYjBtczT"
       },
-      "execution_count": 202,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1877,7 +1916,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 203,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1905,7 +1944,7 @@
       "metadata": {
         "id": "fTALSw1KOKWS"
       },
-      "execution_count": 204,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1920,7 +1959,7 @@
         "id": "3Ej1a5xZOcGy",
         "outputId": "6b24e9d6-cae2-445d-cc79-43f858f75063"
       },
-      "execution_count": 205,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1968,7 +2007,7 @@
         "id": "nE1A3Q7xOPof",
         "outputId": "518ef91c-c05f-4674-e956-4868faa12639"
       },
-      "execution_count": 206,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1995,7 +2034,7 @@
           "height": 759
         }
       },
-      "execution_count": 207,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2475,7 +2514,7 @@
           "height": 300
         }
       },
-      "execution_count": 208,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2854,7 +2893,7 @@
       "metadata": {
         "id": "nC5MjcgBOYS0"
       },
-      "execution_count": 209,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2870,7 +2909,7 @@
       "metadata": {
         "id": "jEzZW44FRcL0"
       },
-      "execution_count": 210,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2886,7 +2925,7 @@
           "height": 35
         }
       },
-      "execution_count": 211,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2912,7 +2951,7 @@
       "metadata": {
         "id": "QQNDFAjbR8dS"
       },
-      "execution_count": 212,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2927,7 +2966,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 213,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2954,7 +2993,7 @@
           "height": 105
         }
       },
-      "execution_count": 214,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2980,7 +3019,7 @@
       "metadata": {
         "id": "02xBY_EySpDH"
       },
-      "execution_count": 215,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2995,7 +3034,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 216,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3042,7 +3081,7 @@
           "height": 140
         }
       },
-      "execution_count": 217,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3078,7 +3117,7 @@
       "metadata": {
         "id": "GW3K8Tu4WMCb"
       },
-      "execution_count": 218,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3090,7 +3129,7 @@
       "metadata": {
         "id": "EfKPYlOpWVb_"
       },
-      "execution_count": 219,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3105,7 +3144,7 @@
         "id": "cJlUGQi7zIj0",
         "outputId": "8b4c9533-fb89-428e-a903-62452458c077"
       },
-      "execution_count": 220,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3138,7 +3177,7 @@
       "metadata": {
         "id": "hdOdP8HCWqMJ"
       },
-      "execution_count": 221,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3154,7 +3193,7 @@
         },
         "id": "2Jj6vF5Z02P5"
       },
-      "execution_count": 222,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3180,7 +3219,7 @@
       "metadata": {
         "id": "g2TvB7x1XnaN"
       },
-      "execution_count": 223,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3195,7 +3234,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 224,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3222,7 +3261,7 @@
           "height": 53
         }
       },
-      "execution_count": 229,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3248,7 +3287,7 @@
       "metadata": {
         "id": "alNRbzer1-7s"
       },
-      "execution_count": 230,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3263,7 +3302,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 231,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3293,7 +3332,7 @@
           "height": 35
         }
       },
-      "execution_count": 233,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3319,7 +3358,7 @@
       "metadata": {
         "id": "IWgpM01t2Jwe"
       },
-      "execution_count": 234,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3334,7 +3373,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 235,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3361,7 +3400,7 @@
           "height": 35
         }
       },
-      "execution_count": 236,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3387,7 +3426,7 @@
       "metadata": {
         "id": "Sd-bdVrj23m2"
       },
-      "execution_count": 237,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3402,7 +3441,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 241,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3429,7 +3468,7 @@
           "height": 1000
         }
       },
-      "execution_count": 246,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4054,7 +4093,7 @@
           "height": 217
         }
       },
-      "execution_count": 255,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4260,7 +4299,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 263,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4322,7 +4361,7 @@
           "height": 450
         }
       },
-      "execution_count": 284,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4350,7 +4389,7 @@
         "id": "-1JOvlMX-h5Y",
         "outputId": "bd87e031-b3d3-41d9-c5fa-135363ae8548"
       },
-      "execution_count": 288,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4377,7 +4416,7 @@
           "height": 1000
         }
       },
-      "execution_count": 283,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
